Coming soon config and page added

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -143,3 +143,18 @@
     font-family: 'Inter', sans-serif !important;
   }
 }
+
+@layer utilities {
+  @keyframes shine {
+    0% {
+      background-position: 200% 0;
+    }
+    100% {
+      background-position: -200% 0;
+    }
+  }
+  
+  .animate-shine {
+    animation: shine 5s linear infinite;
+  }
+}
